# PipePad

./: .gitignore  README.md  pypad.py  pyproject.toml  run_pad.sh  settings.toml  template.py
pipepad/: __init__.py  cli.py  config.py  config_old.py  language.py  pad.py  pipepad_lib.py  record.py  registry.py  template.py  user_lib.py  util.py
pipepad/languages/: README  python.py
pipepad/templates/: template.ppad.py  template.ppad.txt  update_templates.py
sample_data/: timestamps.txt
templates/: template.ppad.py  template.ppad.txt  template.py
tests/: test_cli.py  test_cli.toml  test_pad.py  test_record.py  test_registry.py  test_settings.py  util.py
