[tool.poetry]
name = "pipepad"
version = "0.1.0"
description = ""
authors = ["Ben <mail@ben-nichols.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-coverage = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ppad = "pipepad.pipepad_lib:main"
pipepad = "pipepad.pipepad_lib:main"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pipepad --cov-report term-missing"
log_level = "DEBUG"

# I/O error for log_cli
# https://github.com/pallets/click/issues/824
#log_cli = true

log_file = "var/test.log"

testpaths = [
]

