[tool.poetry]
name = "pipepad"
version = "0.1.0"
description = ""
authors = ["Ben <mail@ben-nichols.net>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest-coverage = "^0.0"
PyYAML = "^6.0"
click = "^8.1.3"
dynaconf = "^3.1.11"
pyshelltest = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ppad = "pipepad.pipepad_lib:main"
pipepad = "pipepad.pipepad_lib:main"
pad = "pipepad.cli:cli"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pipepad --cov-report term-missing"
log_level = "DEBUG"

# I/O error for log_cli
# https://github.com/pallets/click/issues/824
#log_cli = true

log_file = "var/test.log"

testpaths = [
]

